[gd_scene load_steps=14 format=3 uid="uid://db16skm158cs2"]

[ext_resource type="Script" uid="uid://w8lh4sgv5fls" path="res://scene/MainMenu.gd" id="1_85i58"]
[ext_resource type="Texture2D" uid="uid://d1quhceu2mi7l" path="res://assets/lvl1-bg/bg/bg.png" id="2_581fk"]
[ext_resource type="Texture2D" uid="uid://68fbpradrnng" path="res://assets/lvl1-bg/bg/Background_0.png" id="3_ee4am"]
[ext_resource type="FontFile" uid="uid://d3easpuo6ebkl" path="res://assets/TrajanPro-Regular.ttf" id="4_581fk"]
[ext_resource type="FontFile" uid="uid://c1v035gxx5dwl" path="res://assets/TrajanPro-Bold.otf" id="6_ee4am"]
[ext_resource type="Script" uid="uid://rgsk8dsmect7" path="res://scene/button.gd" id="8_ee4am"]
[ext_resource type="PackedScene" uid="uid://cknie8q5idtlq" path="res://skeleton.tscn" id="9_581fk"]
[ext_resource type="Texture2D" uid="uid://duquwbej1akbs" path="res://assets/samping.png" id="9_f2och"]
[ext_resource type="PackedScene" uid="uid://cpnkumnlhlm1b" path="res://leaf.tscn" id="10_581fk"]
[ext_resource type="Script" uid="uid://drrci3532asp3" path="res://scene/skeleton.gd" id="10_ee4am"]
[ext_resource type="AudioStream" uid="uid://iukp511pdrbf" path="res://assets/music/MainMenu.ogg" id="12_ca4gs"]
[ext_resource type="Script" uid="uid://b8vtd3leqa3yc" path="res://scene/leaf_spawner.gd" id="12_f2och"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ee4am"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_85i58")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 1156.0
offset_bottom = 659.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="TextureRect"]
follow_viewport_enabled = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="TextureRect/ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/ParallaxBackground/ParallaxLayer"]
z_index = 1
position = Vector2(577.625, 329.625)
scale = Vector2(1.67113, 1.81371)
texture = ExtResource("2_581fk")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="TextureRect/ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/ParallaxBackground/ParallaxLayer2"]
position = Vector2(587, 312.5)
scale = Vector2(1.59115, 1.61779)
texture = ExtResource("3_ee4am")

[node name="GameTitle2" type="Label" parent="."]
offset_top = 119.0
offset_right = 1155.0
offset_bottom = 183.0
theme_override_fonts/font = ExtResource("6_ee4am")
theme_override_font_sizes/font_size = 64
text = "Pustaka Swarnadwipa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTitle" type="Label" parent="."]
offset_top = 187.0
offset_right = 1155.0
offset_bottom = 215.0
theme_override_fonts/font = ExtResource("6_ee4am")
theme_override_font_sizes/font_size = 28
text = "The Sumatra Chronicles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 481.0
offset_top = 287.0
offset_right = 664.0
offset_bottom = 517.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 14
alignment = 1

[node name="new_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_581fk")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ee4am")
text = "New Game"
flat = true
script = ExtResource("8_ee4am")

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/new_game"]
position = Vector2(-25, 23)
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/new_game"]
position = Vector2(224, 22)
rotation = 3.14159
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_581fk")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ee4am")
text = "Continue"
flat = true
script = ExtResource("8_ee4am")

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/continue"]
position = Vector2(-22, 23)
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/continue"]
position = Vector2(219, 22)
rotation = 3.14159
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_581fk")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ee4am")
text = "Settings
"
flat = true
script = ExtResource("8_ee4am")

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/settings"]
position = Vector2(-14, 23)
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/settings"]
position = Vector2(209, 22)
rotation = 3.14159
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_581fk")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ee4am")
text = "Exit
"
flat = true
script = ExtResource("8_ee4am")

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/exit"]
position = Vector2(29, 23)
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/exit"]
position = Vector2(170, 22)
rotation = 3.14159
scale = Vector2(0.11859, 0.119145)
texture = ExtResource("9_f2och")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 329)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="Skeleton" parent="." instance=ExtResource("9_581fk")]
position = Vector2(29, 462)
script = ExtResource("10_ee4am")

[node name="LeafSpawner" type="Node2D" parent="."]
script = ExtResource("12_f2och")
leaf_scene = ExtResource("10_581fk")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ca4gs")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
